# Unix-Like-OS

./: README.md
code/: Buf.h  BufferManager.cpp  BufferManager.h  CMakeLists.txt  FileManager.cpp  FileManager.h  FileSystem.cpp  FileSystem.h  Inode.cpp  Inode.h  OpenFileManager.cpp  OpenFileManager.h  Utility.h  _Kernel.cpp  _Kernel.h  main.cpp
img/: 实现流程.pos
test/: 命令行测试.txt
test/测试所用文件/: 800_bytes.txt  ReadMe.txt
